@@ -103,21 +103,21 @@ bld_info = {
     "CxiDg2_Imb01"     : IpimbDetector,
     "CxiDg2_Imb02"     : IpimbDetector,
     "CxiDg3_Imb01"     : IpimbDetector,
-    "CxiDg1_Pim"       : DdlDetector,
-    "CxiDg2_Pim"       : DdlDetector,
-    "CxiDg3_Pim"       : DdlDetector,
-    "XppMon_Pim0"      : DdlDetector,
-    "XppMon_Pim1"      : DdlDetector,
+    "CxiDg1_Pim"       : IpimbDetector,
+    "CxiDg2_Pim"       : IpimbDetector,
+    "CxiDg3_Pim"       : IpimbDetector,
+    "XppMon_Pim0"      : IpimbDetector,
+    "XppMon_Pim1"      : IpimbDetector,
     "XppSb2_Ipm"       : IpimbDetector,
     "XppSb3_Ipm"       : IpimbDetector,
-    "XppSb3_Pim"       : DdlDetector,
-    "XppSb4_Pim"       : DdlDetector,
+    "XppSb3_Pim"       : IpimbDetector,
+    "XppSb4_Pim"       : IpimbDetector,
     "XppEnds_Ipm0"     : IpimbDetector,
     "XppEnds_Ipm1"     : IpimbDetector,
     "MEC-XT2-PIM-02"   : DdlDetector,
     "MEC-XT2-PIM-03"   : DdlDetector,
     "CxiDg3_Spec"      : DdlDetector,
-    "NH2-SB1-IPM-02"   : DdlDetector,
+    "NH2-SB1-IPM-02"   : IpimbDetector,
     "FEE-SPEC0"        : DdlDetector,
     "SXR-SPEC0"        : DdlDetector,
     "XPP-SPEC0"        : DdlDetector,
